# secret-sync

./: .gitignore  Cargo.toml  README.md  cspell.json  dist-workspace.toml  secret-sync.toml
.github/workflows/: release.yml  test.yml
src/: config.rs  main.rs  pull.rs  push.rs
src/fs/: mod.rs  real.rs
src/secret/: aws.rs  mod.rs
tests/: test_pull.rs  test_push.rs  test_quick_pull.rs  test_quick_push.rs
tests/common/: aws.rs  mod.rs
tests/samples/config/: example-1.json  example-1.toml  example-2.json  example-2.toml  example-3.json  example-3.toml
wix/: main.wxs
