[package]
name = "secret-sync"
version = "0.1.0"
edition = "2024"
authors = ["Jacobtread <jacobtread@gmail.com>"]
repository = "https://github.com/docbox-nz/docbox-cli"
readme = "./README.md"
license = "MIT"

[dependencies]
# Environment variables
dotenvy = "=0.15.7"

# Command line parser
clap = { version = "4.5.54", features = ["derive"] }

# Asynchronous runtime & Helpers
tokio = { version = "=1.49.0", features = ["full"] }

# Logging
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.22", features = ["env-filter"] }

# Error handling
eyre = "=0.6.12"
color-eyre = "=0.6.5"

# Tracing progress indicator
tracing-indicatif = "0.3.13"

# AWS configuration
aws-config = { version = "=1.8.12", features = ["behavior-version-latest"] }

# AWS Secrets Manager SDK
aws-sdk-secretsmanager = "=1.98.0"
toml = {version = "0.9.11", features = ["preserve_order"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
futures = "0.3.31"
