[package]
name = "secret-sync"
version = "0.1.0"
edition = "2024"
description = "CLI tool for syncing local secret files with remote secret managers"
authors = ["Jacobtread <jacobtread@gmail.com>"]
repository = "https://github.com/jacobtread/secret-sync"
homepage = "https://github.com/jacobtread/secret-sync"
readme = "./README.md"
license = "MIT"

[package.metadata.wix]
upgrade-guid = "9BB16D1C-DA14-498C-B771-AE17B033A3E9"
path-guid = "DD93F378-398C-4B6C-8101-0EE96F8D8E53"
license = false
eula = false

[dependencies]
# Command line parser
clap = { version = "4.5.54", features = ["derive"] }

# Asynchronous runtime & Helpers
tokio = { version = "=1.49.0", features = ["full"] }

# Async in traits for dynamic dispatch
async-trait = "0.1.89"

# Logging
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.22", features = ["env-filter"] }

# Error handling
eyre = "=0.6.12"
color-eyre = "=0.6.5"

# Tracing progress indicator
tracing-indicatif = "0.3.13"

# AWS configuration
aws-config = { version = "=1.8.12", features = ["behavior-version-latest"] }

# AWS Secrets Manager SDK
aws-sdk-secretsmanager = "=1.98.0"

# Serialization
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
toml = {version = "=0.9.11", features = ["preserve_order"] }

# Automatic mock generation for tests
mockall = "0.14.0"

[dev-dependencies]
# Test containers for integration tests
testcontainers = "=0.26.3"
# Temporary file paths
tempfile = "3.24.0"
# Command line assertions for tests
assert_cmd = "2.1.2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
